Set correct gaps

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -295,7 +295,7 @@ body {
   justify-content: center;
   padding: 40px 32px 0;
   margin: 0 auto;
-  gap: 24px;
+  gap: 16px;
 
   &--list {
     flex-direction: column;
@@ -352,7 +352,7 @@ body {
     flex-direction: row;
     max-width: 100%;
     width: 100%;
-    padding: 12px 28px;
+    padding: 12px 21px;
     justify-content: left;
     gap: 32px;
 
